avoid content jump by always showing the scrollbar

--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -44,6 +44,7 @@
 
 body {
   margin: 0 0 calc(var(--navigation-height) + 22.5px) 0;
+  overflow-y: scroll; /* avoid content jump */
 }
 /* Resets */
 ul {
